--- a/Parcial/Parcial/Pages/_Host.cshtml
+++ b/Parcial/Parcial/Pages/_Host.cshtml
@@ -32,5 +32,7 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <script src="~/js/alert.js"></script>
 </body>
 </html>
