--- a/Parcial/Parcial/Shared/NavMenu.razor
+++ b/Parcial/Parcial/Shared/NavMenu.razor
@@ -17,6 +17,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Agregar Robo
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Mapa">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Mapa de Robos
+            </NavLink>
+        </li>
     </ul>
 </div>
 
