--- a/Parcial/Parcial/Pages/Mapa.razor
+++ b/Parcial/Parcial/Pages/Mapa.razor
@@ -8,7 +8,6 @@
     </div>
 </div>
 <br>
-<br>
 <div class="row">
     <div class="col-xl-6">
         <RadzenGoogleMap style="height: 500px;width: 1100px" Zoom=@zoom Center=@(new GoogleMapPosition() { Lat = 19.0149, Lng = -70.4297 })>
@@ -23,13 +22,14 @@
 </div>
 @code {
     int zoom = 7;
-    List<ROBOS> LS_R = new List<ROBOS>();
+    List<ROBOS> LS_R = null;
+
+
     protected override async Task OnInitializedAsync()
     {
         var url = "https://api-robov1.herokuapp.com/api/Robos";
         var datos = await http.GetJsonAsync<List<ROBOS>>(url);
         LS_R = datos;
-        
     }
 
 }
